--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+#root{
+    background-color: #f5f5f5;
+    height: 100vh;
+}
 .lcd-display{
     background-color: #73ef73;
     font-size: 3rem;
@@ -70,4 +74,14 @@
     max-height: 50vh;
     overflow-y: auto;
     overflow-x: hidden;
+}
+
+.card-header{
+    background-color: #354e81 !important;
+    color: #ffffff !important;
+}
+
+.input-group-text.bg-main{
+    background-color: #354e81 !important;
+    color: #ffffff !important;
 }
