--- a/src/styles.css
+++ b/src/styles.css
@@ -3,11 +3,12 @@
     height: 100vh;
 }
 .lcd-display{
-    background-color: #73ef73;
+    background-color: #1749af;
     font-size: 3rem;
     text-align: center;
     vertical-align: center;
-    border: solid 3px #0bb70b;
+    border: ssolid 3px #002e72;
+    color: white;
     height: 100px;
 }
 
