--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
     font-size: 3rem;
     text-align: center;
     vertical-align: center;
-    border: ssolid 3px #002e72;
+    border: solid 3px #002e72;
     color: white;
     height: 100px;
 }
@@ -85,4 +85,13 @@
 .input-group-text.bg-main{
     background-color: #354e81 !important;
     color: #ffffff !important;
+}
+
+.swal2-html-container{
+    font-size: 1.5rem;
+    text-align: unset !important;
+}
+
+.form-check-label{
+    font-weight: bold;
 }
